--- a/check_data/conda.yml
+++ b/check_data/conda.yml
@@ -1,11 +1,11 @@
-name: download_data
+name: check_data
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - pandas=1.2.3
+  - pandas=1.4.4
   - pip=20.3.3
-  - pytest=6.2.2
-  - scipy=1.6.1
+  - pytest=7.1.3
+  - scipy=1.7.3
   - pip:
-      - wandb==0.10.21
+      - wandb==0.13.2
