--- a/download/conda.yml
+++ b/download/conda.yml
@@ -1,9 +1,9 @@
-name: download_data
+name: download
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - requests=2.24.0
+  - requests=2.28.1
   - pip=20.3.3
   - pip:
-      - wandb==0.10.21
+      - wandb==0.13.2
