--- a/random_forest/conda.yml
+++ b/random_forest/conda.yml
@@ -1,15 +1,15 @@
-name: download_data
+name: random_forest
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - pandas=1.2.3
+  - pandas=1.4.4
   - pip=20.3.3
   - scikit-learn=0.24.1
-  - matplotlib==3.2.2
-  - plotly==4.4.1
-  - pillow=8.1.2
-  - mlflow=1.14.1
+  - matplotlib==3.5.3
+  - plotly==5.10.0
+  - pillow=9.2.0
+  - mlflow=1.28.0
   - pip:
-      - wandb==0.10.21
-      - omegaconf==2.0.6
+      - wandb==0.13.2
+      - omegaconf==2.2.2
