--- a/segregate/conda.yml
+++ b/segregate/conda.yml
@@ -1,10 +1,10 @@
-name: download_data
+name: segregate
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - pandas=1.2.3
+  - pandas=1.4.4
   - pip=20.3.3
   - scikit-learn=0.24.1
   - pip:
-      - wandb==0.10.21
+      - wandb==0.13.2
